# banking

./: .gitattributes  .gitignore  .npmrc  Cargo.toml  README.md  flake.nix  package-lock.json  package.json  turbo.json
.github/workflows/: release-container.yml  warnings.yml
backend/: .env.example  Cargo.toml  build.rs
backend/src/: config.rs  error_reporter.rs  lib.rs  main.rs
backend/src/api/: mod.rs  openapi.rs  router.rs  state.rs
backend/src/api/handler/: health.rs
backend/src/grpc/: health.rs  mod.rs
backend/src/infrastructure/: db.rs  mod.rs  tigerbeetle.rs
cabinet/backend/: .env.example  Cargo.toml  README.md
cabinet/backend/src/: config.rs  cookies.rs  dto.rs  error.rs  main.rs  session.rs  state.rs  util.rs
cabinet/backend/src/routes/: admin.rs  auth.rs  identity.rs  mod.rs  money.rs  platform.rs  system.rs
cabinet/backend/tests/: concierge_parity.rs
cabinet/frontend/: .env.example  .gitignore  README.md  config.ts  eslint.config.mjs  instrumentation.ts  mfe-registry.json  next.config.ts  openapi-ts.config.ts  package.json  proxy.ts
cabinet/frontend/app/: error.tsx  forbidden.tsx  layout.tsx  not-found.tsx
cabinet/frontend/app/(app)/: layout.tsx
cabinet/frontend/app/(auth)/: layout.tsx
cabinet/frontend/application/: providers.tsx
cabinet/frontend/mfe/: build.mjs
clients/cabinet/: .env.example  README.md  instrumentation.ts  next.config.ts  openapi-ts.config.ts  package.json  proxy.ts
clients/cabinet/application/: experiments.ts  providers.tsx
clients/cabinet/backend/: .env.example  Cargo.toml  README.md
clients/cabinet/backend/src/: config.rs  dto.rs  error.rs  main.rs  oauth.rs  session.rs  state.rs  util.rs
clients/cabinet/backend/src/routes/: auth.rs  mod.rs  money.rs  system.rs
clients/cabinet/backend/tests/: concierge_parity.rs
clients/cabinet/frontend/: .env.example  README.md  next.config.ts  openapi-ts.config.ts  package.json  proxy.ts  tsconfig.json
clients/core/: .env.example  .gitignore  README.md  eslint.config.mjs  mfe-registry.json  next.config.ts  package.json
clients/core/app/: layout.tsx  page.tsx
clients/core/application/: providers.tsx
clients/landing/: package.json
contracts/: Cargo.toml  build.rs  concierge-pin-check.sh  openapi.json
contracts/proto/banking/v1/: allocations.proto  auth.proto  balance.proto  funds.proto  health.proto  users.proto  wallet.proto
contracts/proto/fund/v1/: allocations.proto  auth.proto  balance.proto  health.proto  users.proto
contracts/proto/signer/v1/: signer.proto
contracts/src/: lib.rs
deploy/: cabinet-backend.nix  piggybank.nix  tigerbeetle.nix
docs/: ARCHITECTURE.md  RUNBOOK-polygon-rail.md  RUNBOOK-withdrawals.md
docs/.readme_assets/: description.md  other.md  usage.md
domain/: Cargo.toml
domain/src/: allocations.rs  auth.rs  authz.rs  balance.rs  error.rs  lib.rs  money.rs  redemptions.rs  subscriptions.rs  users.rs  withdrawals.rs
frontend/: Cargo.toml  Dioxus.toml  input.css  lib.rs  main.rs
frontend/application/: layout.rs  router.rs
frontend/entities/: mod.rs
frontend/features/: mod.rs
frontend/shared/ui/: mod.rs
frontend/views/: home.rs  not_found.rs
piggybank/auth/: Cargo.toml  PATTERNS.md  README.md
piggybank/auth/examples/: mint_service_token.rs
piggybank/auth/src/: authorizer.rs  claims.rs  config.rs  google.rs  interceptor.rs  jwks.rs  lib.rs  management.rs  provisioner.rs  service.rs  service_token.rs  signer.rs  telemetry.rs  verifier.rs
piggybank/core/: .env.example  Cargo.toml  PATTERNS.md
piggybank/core/migrations/: 0001_users.sql  0002_balance_allocations.sql  0003_wallets.sql  0004_unified_balance.sql  0005_fund_shares.sql  0006_user_profile.sql  0007_deposit_address_kind.sql  0008_persist_tb_account_flags.sql  0009_park_outbox_events.sql  0010_fund_position_units.sql  0011_cross_plane_bridge.sql  0012_concierge_user_id.sql  0013_deposit_scan_cursor.sql  0014_withdrawal_broadcasts.sql  0015_generalize_withdrawal_broadcasts.sql  0016_user_role.sql  0017_operations_mode.sql  0018_withdrawal_tx_ref_unique.sql  0019_deposit_swept.sql  0020_rail_chain_identity.sql
piggybank/core/src/: config.rs  lib.rs  main.rs
piggybank/core/src/application/: allocations.rs  auth_sync.rs  balance.rs  funds.rs  mod.rs  users.rs  wallet.rs  withdrawals.rs
piggybank/core/src/infrastructure/: allocations.rs  bridge.rs  bsc_rpc.rs  custody.rs  db.rs  deposit_addresses.rs  deposit_watcher.rs  deposits.rs  dispatcher.rs  evm_rpc.rs  ledger.rs  mod.rs  nav.rs  operations.rs  outbox.rs  positions.rs  reaper.rs  reconciliation.rs  redemptions.rs  relay.rs  signer_addresses.rs  subscriptions.rs  sweep.rs  telemetry.rs  tigerbeetle.rs  ton_custody.rs  ton_deposit_watcher.rs  ton_rpc.rs  ton_sweep.rs  ton_withdrawal_watcher.rs  tron_custody.rs  tron_deposit_watcher.rs  tron_rpc.rs  tron_sweep.rs  tron_withdrawal_watcher.rs  users.rs  withdrawal_watcher.rs  withdrawals.rs
piggybank/core/src/ports/: allocations.rs  custody.rs  deposit_addresses.rs  deposits.rs  ledger.rs  mod.rs  nav.rs  positions.rs  redemptions.rs  subscriptions.rs  withdrawals.rs
piggybank/core/src/services/: balance.rs  context.rs  funds.rs  health.rs  mod.rs  support.rs  users.rs  wallet.rs
piggybank/core/tests/: balance_allocations.rs  bridge_consumer.rs  broadcast_guard.rs  db_pool_sizing.rs  deposit_address_gating.rs  deposits_history.rs  health_readiness.rs  ledger_drift_guard.rs  rail_chain_identity.rs  relay_batching.rs  relay_recovery.rs  relay_shutdown.rs  relay_singleton.rs  users_repository.rs  wallet_rail_gating.rs  wallet_withdrawals.rs
piggybank/signer/: .env.example  Cargo.toml  build.rs
piggybank/signer/migrations/: 0001_wallet_secrets.sql  0002_kek_epochs.sql
piggybank/signer/proto/: tron.proto
piggybank/signer/src/: config.rs  error.rs  evm_tx.rs  kek_guard.rs  key_vault.rs  lib.rs  main.rs  policy.rs  provision.rs  secrets.rs  service.rs  ton_tx.rs  tron_tx.rs
piggybank/signer/tests/: kek_epoch.rs  provisioning.rs  seam_auth.rs
piggybank/signer/tests/common/: mod.rs
proto/fund/v1/: health.proto
(+153 files in other folders)
