cargo-features = ["codegen-backend"]

[workspace]
# `piggybank/` is the central backend: `core` (the hub server + composition root)
# and `auth` (the auth service + shared verification lib) are sibling crates.
members = ["piggybank/core", "piggybank/auth", "domain", "contracts"]
# `.tb-client` must live at the repo root, NOT inside a member dir: cargo's
# exclude check is `!explicit_member && excluded`, and member matching is
# prefix-based — anything under a member dir can never be excluded.
exclude = [".tb-client"]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
dotenvy = "0.15.7"
getrandom = { version = "0.3", features = ["wasm_js"] }
jiff = "0.2"
ev = { git = "https://github.com/EV-invest/lib.git", default-features = false, features = ["architecture"] }
# Hub-internal crates. Other service repos depend on `evbanking_contracts` (and,
# transitively, `evbanking_auth`) by git, so they get the wire stubs and the shared
# auth verification flow from one place.
domain = { path = "domain" }
evbanking_auth = { path = "piggybank/auth" }
evbanking_contracts = { path = "contracts" }
http = "1"
# `rust_crypto` selects the pure-Rust provider (ed25519-dalek for our EdDSA tokens,
# rsa for verifying Google's RS256 id_tokens) — no C/aws-lc-rs toolchain, matching
# the rustls-only stance.
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
# rustls only (no native-tls), matching how `ev` pulls reqwest — the auth service
# uses it solely to reach Google's OAuth2 token + certs endpoints.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
sqlx = "0.9.0"
thiserror = "2.0.18"
# via the symlink (kept current by the flake shellHook), not the canonicalized store path - hardcoding the hash goes stale on every tigerbeetle derivation rebuild
tigerbeetle = { path = ".tb-client" }
time = "0.3"
tokio = "1.52.3"
tonic = "0.13"
tonic-build = "0.13"
tonic-web = "0.13"
tower = "0.5.3"
tower-http = "0.6.11"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = "1.23.2"

[workspace.lints.rust]
unused_features = "allow"
