cargo-features = ["codegen-backend"]

[workspace]
# `piggybank/` is the central backend: `core` (the hub server + composition root),
# `auth` (the auth service + shared verification lib), and `signer` (the separate-
# process key vault that holds chain private keys at rest) are sibling crates.
# `cabinet/backend` is the cabinet's BFF — a standalone HTTP service that
# orchestrates the money plane (this repo) and the concierge identity plane.
members = [
    "cabinet/backend",
    "contracts",
    "domain",
    "piggybank/auth",
    "piggybank/core",
    "piggybank/signer",
]
# `.tb-client` must live at the repo root, NOT inside a member dir: cargo's
# exclude check is `!explicit_member && excluded`, and member matching is
# prefix-based — anything under a member dir can never be excluded.
exclude = [".tb-client"]
resolver = "3"

[workspace.dependencies]
async-trait = "0.1.89"
# Browser-facing HTTP for the cabinet BFF (the rest of the workspace is gRPC-only).
axum = "0.8"
axum-extra = "0.10"
base64 = "0.22"
chacha20poly1305 = "0.10"
clap = { version = "4", features = ["derive", "env"] }
color-eyre = "0.6"
# Hub-internal crates. Other service repos depend on `evbanking_contracts` (and,
# transitively, `evbanking_auth`) by git, so they get the wire stubs and the shared
# auth verification flow from one place.
domain = { path = "domain" }
dotenvy = "0.15.7"
ed25519-dalek = "2"
ev = { version = "0.2.1", package = "ev_lib", default-features = false, features = ["architecture"] }
evbanking_auth = { path = "piggybank/auth" }
evbanking_contracts = { path = "contracts" }
# The shared verify-side flow (JWKS-cached local verification of concierge access
# JWTs) — the BFF's request credential is the shell-set `ev_access` cookie.
evconcierge_auth = { git = "https://github.com/EV-invest/concierge.git", rev = "15ad806b756052178594f957a2e841e155a1d713" }
# The concierge identity plane's wire contracts, pulled in by git like any downstream
# consumer. The cabinet backend (the cross-plane orchestrator) and now piggybank-core
# (the one-way lifecycle bridge consumer) depend on it. Pinned to the rev that ships
# `UserEvents.PullUserLifecycle` + the RBAC role/admin work incl. the `ROLE_CHANGED`
# bridge event and the directory/platform admin RPCs (concierge main @ 15ad806).
evconcierge_contracts = { git = "https://github.com/EV-invest/concierge.git", rev = "15ad806b756052178594f957a2e841e155a1d713" }
form_urlencoded = "1"
getrandom = { version = "0.3", features = ["wasm_js"] }
hex = "0.4"
http = "1"
jiff = "0.2"
# `rust_crypto` selects the pure-Rust provider (ed25519-dalek for our EdDSA tokens) —
# no C/aws-lc-rs toolchain, matching the rustls-only stance. The money plane does no
# third-party OAuth (Google sign-in lives wholly in concierge), so no RS256 / reqwest here.
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
k256 = "0.13"
num-bigint = "0.4"
prost = "0.13"
prost-build = "0.13"
# Shared Redis state (refresh families in auth, sessions in the cabinet BFF). rustls
# + tokio only, matching the workspace's no-native-tls stance; the connection-manager
# feature gives a reconnecting multiplexed handle. No-op until REDIS_URL is set.
redis = { version = "0.32", default-features = false, features = ["tokio-rustls-comp", "connection-manager", "script"] }
reqwest = { version = "0.12", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10"
sha3 = "0.10"
smart-default = "^0.7"
sqlx = "0.9.0"
# Constant-time equality for secret/CSRF comparisons (already in the lockfile transitively).
subtle = "2.6"
thiserror = "2.0.18"
# via the symlink (kept current by the flake shellHook), not the canonicalized store path - hardcoding the hash goes stale on every tigerbeetle derivation rebuild
tigerbeetle = { path = ".tb-client" }
time = "0.3"
tokio = "1.52.3"
# CancellationToken for cooperative graceful shutdown (signal → drain → exit). No
# default features — `sync::CancellationToken` is unconditional.
tokio-util = { version = "0.7.18", default-features = false }
tonic = "0.13"
tonic-build = "0.13"
tonic-health = "0.13"
tonic-web = "0.13"
tonlib-core = "0.26"
tower = "0.5.3"
tower-http = "0.6.11"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = "1.23.2"
v_utils = { version = "=2.15.54", features = ["io", "macros", "cli", "xdg"] }
zeroize = "1"

[workspace.lints.rust]
unused_features = "allow"

# smaller target/: trim debuginfo (deps need none), keep line tables for backtraces
[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false
