[package]
name = "backend"
version = "0.1.0"
edition = "2024"
description = "Backend scaffold for the EV fund finance-management system (Axum HTTP + tonic gRPC)"
license = "BlueOak-1.0.0"
publish = false
default-run = "backend"

[dependencies]
anyhow.workspace = true
axum.workspace = true
domain.workspace = true
dotenvy.workspace = true
prost.workspace = true
sentry = { workspace = true, features = ["tower-axum-matched-path", "tracing"] }
serde_json.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio", "tls-rustls", "postgres"] }
tigerbeetle.workspace = true
tokio = { workspace = true, features = ["full"] }
tonic.workspace = true
tower.workspace = true
tower-http = { workspace = true, features = ["trace", "cors"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
utoipa.workspace = true
utoipa-swagger-ui = { workspace = true, features = ["axum"] }

[build-dependencies]
tonic-build.workspace = true
