[package]
name = "frontend"
version = "0.1.0"
edition = "2024"
publish = false
default-run = "frontend"

# Flat layout: crate roots and module folders live at the package root, not
# under src/, so the auto-discovered paths are overridden explicitly.
[lib]
name = "frontend"
path = "lib.rs"

[[bin]]
name = "frontend"
path = "main.rs"

[dependencies]
dioxus.workspace = true
domain.workspace = true
tailwind_fuse.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom.workspace = true
# Pinned to match the wasm-bindgen-cli that nixpkgs' dioxus-cli (`dx`) bundles.
# dx fails the build unless the `wasm-bindgen` crate and its CLI match exactly;
# bump this in lockstep whenever the pinned dioxus-cli changes its CLI version.
wasm-bindgen = "=0.2.118"
