[package]
name = "evbanking_auth"
version = "0.1.0"
edition = "2024"
description = "The hub's auth service + the shared, server-only verification flow. Runs inside piggybank-core as its own task (issuance gRPC + in-process Authorizer channel); also imported by every service repo for stateless JWKS verification. Wasm-unsafe by design."
license = "BlueOak-1.0.0"
publish = false

[dependencies]
color-eyre.workspace = true
ev = { workspace = true, features = ["error_monitoring"] }
evbanking_contracts.workspace = true
http.workspace = true
jsonwebtoken.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
subtle.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "sync"] }
tonic.workspace = true
tower.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }

[lints]
workspace = true
