[package]
name = "piggybank-core"
version = "0.1.0"
edition = "2024"
description = "The EV banking hub server — composition root that runs the core gRPC services and the auth service as in-process tasks over Postgres + TigerBeetle."
license = "BlueOak-1.0.0"
publish = false
default-run = "piggybank"

[[bin]]
name = "piggybank"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

anyhow.workspace = true
async-trait.workspace = true
domain.workspace = true
dotenvy.workspace = true
ev = { workspace = true, features = ["analytics", "error_monitoring"] }
evbanking_auth.workspace = true
evbanking_contracts.workspace = true
evconcierge_contracts.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "migrate"] }
thiserror.workspace = true
tigerbeetle.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
tonic = { workspace = true, features = ["tls-ring", "tls-webpki-roots"] }
tonic-web.workspace = true
tower.workspace = true
tower-http = { workspace = true, features = ["trace"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
uuid = { workspace = true, features = ["v4", "v5"] }

[dev-dependencies]
domain.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
tokio-util.workspace = true
uuid = { workspace = true, features = ["v4"] }
