[package]
name = "piggybank-core"
version = "0.1.0"
edition = "2024"
description = "The EV banking hub server — composition root that runs the core gRPC services and the auth service as in-process tasks over Postgres + TigerBeetle."
license = "BlueOak-1.0.0"
publish = false
default-run = "piggybank"

[[bin]]
name = "piggybank"
path = "src/main.rs"

[dependencies]
hex = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
async-trait.workspace = true
clap.workspace = true

color-eyre.workspace = true
domain.workspace = true
dotenvy.workspace = true
ev = { workspace = true, features = ["analytics", "error_monitoring"] }
evbanking_auth.workspace = true
evbanking_contracts.workspace = true
evconcierge_contracts.workspace = true
serde_json.workspace = true
smart-default.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "migrate"] }
thiserror.workspace = true
tigerbeetle.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
tonic = { workspace = true, features = ["tls-ring", "tls-webpki-roots"] }
tonic-health.workspace = true
tonic-web.workspace = true
tower.workspace = true
tower-http = { workspace = true, features = ["trace"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
uuid = { workspace = true, features = ["v4", "v5"] }
v_utils.workspace = true

[dev-dependencies]
domain.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
tokio-util.workspace = true
uuid = { workspace = true, features = ["v4"] }

[lints]
workspace = true
