[package]
name = "piggybank-signer"
version = "0.1.0"
edition = "2024"
description = "The EV banking signer — a separate-process key vault that generates chain keypairs, stores the private keys encrypted at rest (envelope/XChaCha20-Poly1305), and serves key provisioning over gRPC. The hub never holds the KEK or a plaintext key."
license = "BlueOak-1.0.0"
publish = false
default-run = "signer"

[[bin]]
name = "signer"
path = "src/main.rs"

[dependencies]
base64.workspace = true
chacha20poly1305 = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
k256 = { workspace = true, features = ["ecdsa"] }
num-bigint = { workspace = true }
sha3 = { workspace = true }
tonlib-core = { workspace = true }
zeroize = { workspace = true }

color-eyre.workspace = true
domain.workspace = true
dotenvy.workspace = true
ev = { workspace = true, features = ["otel"] }
evbanking_auth.workspace = true
evbanking_contracts.workspace = true
getrandom.workspace = true
prost.workspace = true
sha2.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "migrate"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true, features = ["tls-ring"] }
tower.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json"] }
uuid = { workspace = true, features = ["v4"] }

[build-dependencies]
prost-build = { workspace = true }

[dev-dependencies]
jsonwebtoken.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
