[package]
name = "cabinet-backend"
version = "0.1.0"
edition = "2024"
description = "The cabinet BFF — a standalone HTTP service that runs the OAuth confidential-client flow, holds the user's session (and the plane tokens) server-side, and proxies the browser's JSON requests to the concierge identity plane and the piggybank money plane over gRPC."
license = "BlueOak-1.0.0"
publish = false
default-run = "cabinet-backend"

[[bin]]
name = "cabinet-backend"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
axum-extra = { workspace = true, features = ["cookie"] }
base64.workspace = true
dotenvy.workspace = true
ev = { workspace = true, features = ["analytics", "error_monitoring"] }
evbanking_contracts.workspace = true
evconcierge_contracts.workspace = true
form_urlencoded.workspace = true
getrandom.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
subtle.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["full"] }
tonic.workspace = true
tower-http = { workspace = true, features = ["timeout", "trace"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

[dev-dependencies]
prost.workspace = true
